style.css
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

* {
    box-sizing: border-box;
}

/*___________________________________________________________ CSS RESET ABOVE */

@font-face {
    font-family: Inter;
    src: url(./font/Inter-VariableFont_slnt\,wght.ttf);
}

html,
body {
    overflow-x: hidden;
    overflow-y: hidden;
}

body {
    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    position: relative;
}

:root {
    --color-background-form: #e4dada;
    --color-background-primary: #587265;
    --color-background-secondary: #a86a5d;
    --color-accent-primary: #005681;
    --color-accent-secondary: #c44b14;
    --color-text: #3b3b3b;
}

.logo_responsive {
    display: none;
}

section {
    transition: 1s;
    position: relative;
    min-height: 100vh;
    background-color: var(--color-background-primary);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

section .container {
    display: flex;
    flex-shrink: 0;
    position: relative;
    height: 600px;
    width: 800px;
    box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.329);
    overflow: hidden;
}

.sign_in,
.sign_up {
    display: flex;
    position: absolute;
    height: 100%;
    width: 100%;
}

.sign_in .form_box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 100%;
    background-color: var(--color-background-form);
    padding: 20px;
}

.sign_in .form_box form {
    display: flex;
    flex-direction: column;
}

.sign_in .form_box h2 {
    font-size: 1.5rem;
    font-weight: bold;
    color: var(--color-text);
    text-align: center;
    margin: 20px 0px;
}

.sign_in .form_box p {
    margin: 30px 0px;
    font-size: 0.9rem;
}

a {
    text-decoration: none;
    color: rgb(78, 78, 255);
    font-weight: bolder;
    cursor: pointer;
}

a:visited {
    text-decoration: none;
    color: rgb(78, 78, 255);
    font-weight: bolder;
    cursor: pointer;
}

.sign_in .image_box {
    transition: 0.5s;
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 50%;
}

.image_box img {
    width: 100%;
    height: auto;
}

.logo {
    height: 120px;
    position: relative;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    bottom: 550px;
}

.logo img {
    height: 80%;
    width: auto;
}

.sign_up .form_box {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 50%;
    height: 100%;
    background-color: var(--color-background-form);
    padding: 20px;
}

.sign_up .form_box form {
    display: flex;
    flex-direction: column;
}

.sign_up .form_box h2 {
    font-size: 1.5rem;
    font-weight: bold;
    color: var(--color-text);
    text-align: center;
    margin: 20px 0px;
}

.sign_up .form_box p {
    margin: 10px 0px;
    font-size: 0.9rem;
}

.sign_up .image_box {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 50%;
}

.sign_up form p:first-of-type {
    font-size: 0.8rem;
}

/* _________________________________RESPONSIVE_______________________________ */

.section.active {
    transition: 1s;
    position: relative;
    min-height: 100vh;
    background-color: var(--color-background-secondary);
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

.sign_up {
    visibility: hidden;
}

.sign_up.active {
    visibility: visible;
}

.sign_in .image_box {
    position: relative;
    transition: 0.5s;
    bottom: 0%;
}

.sign_in .form_box {
    position: relative;
    transition: 0.5s;
    bottom: 0%;
}

.sign_in.active .image_box {
    position: relative;
    transition: 0.5s;
    bottom: -100%;
}

.sign_in.active .form_box {
    position: relative;
    transition: 0.5s;
    bottom: 100%;
}

.sign_up .image_box {
    position: relative;
    transition: 0.5s;
    top: 100%;
}

.sign_up .form_box {
    position: relative;
    transition: 0.5s;
    top: -100%;
}

.sign_up.active .image_box {
    transition: 0.5s;
    top: 0%;
}

.sign_up.active .form_box {
    transition: 0.5s;
    top: 0%;
}

/*____________________________INPUTS AND BUTTONS_____________________________ */

label {
    display: none;
}

input {
    width: 280px;
    height: 40px;
    border: none;
    border-radius: 10px;
    margin: 10px 0px;
    padding: 10px;
    font-family: inherit;
    font-size: 1em;

}

.sign_up button {
    border: none;
    background-color: var(--color-accent-secondary);
    font-family: inherit;
    font-weight: bold;
    color: white;
    font-size: 1em;
    width: 100px;
    height: 30px;
    margin: 10px 0px;
    align-self: end;
    border-radius: 5px;
    cursor: pointer;
}

.sign_in button {
    border: none;
    background-color: var(--color-accent-primary);
    font-family: inherit;
    font-weight: bold;
    color: white;
    font-size: 1em;
    width: 100px;
    height: 30px;
    margin: 10px 0px;
    align-self: end;
    border-radius: 5px;
    cursor: pointer;
}

.sign_up button:active {
    background-color: #91380e;
}

.sign_in button:active {
    background-color: #007ebd;
}

input:focus {
    border-radius: 0;
    outline: none;
}

.sign_up input:not(:placeholder-shown):valid {
    transition: 0.5s;
    border: 2px solid rgb(23, 175, 86);
}

.sign_up input:not(:placeholder-shown):invalid {
    border: 2px solid rgb(175, 53, 23);
}

@media only screen and (max-width: 700px) {

    :root {
        --color-text: #ffffff;
    }

    h2 {
        text-shadow: 1px 1px 10px #3b3b3b;
    }

    section {
        display: flex;
        flex-direction: column;
        overflow-y: hidden;
        overflow-x: hidden;
    }

    section .logo_responsive {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 70px;
        width: auto;
    }

    section .logo_responsive img {
        height: 80%;
        width: auto;
    }

    section .container {
        width: 100vw;
        box-shadow: none;
    }

    .sign_up .image_box {
        display: none;
    }

    .sign_in .image_box {
        display: none;
    }

    .sign_in .form_box {
        width: 100%;
        background: #e4dada7c;
        margin: 0px 20px;
    }

    .sign_up .form_box {
        width: 100%;
        background: #e4dada7c;
        top: 100%;
        margin: 0px 20px;
    }

    .sign_in.active .form_box {
        width: 100%;
        background: #e4dada7c;
        bottom: 100%;
    }

    .sign_up.active .form_box {
        width: 100%;
        background: #e4dada7c;
        top: 0%;
    }

    section {
        background-image: url(./img/background1.jpg);
        background-position: center;
        background-size: cover;
    }

    section.active {
        background-image: url(./img/background2.jpg);
        background-position: center;
        background-size: cover;
    }
}

